@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.9
 
+	- Improved color contrast in secondary selection blocks
+	  of Fl_Text_Display (STR #1917)
 	- Fixed regression in callback handling (STR #1918)
 	- Fixed wrong relative path when absolute path has a 
 	  trailing slash in fl_filename_relative (STR #1920)
